--- a/angular-frontend/src/app/modules/tasks/tasks.component.html
+++ b/angular-frontend/src/app/modules/tasks/tasks.component.html
@@ -1,20 +1,31 @@
-<button routerLink="/" class="btn btn-primary">Go to Landing</button>
+<button routerLink="/" class="bg-purple-300 text-gray-700 p-1 border border-dashed border-red-500">
+  Back
+</button>
 
-<div class="container">
-    <h2>Task List</h2>
-  
-    <input #taskInput type="text" placeholder="New task..." />
-    <button (click)="addTask(taskInput.value); taskInput.value = ''">Add Task</button>
-  
-    <ul *ngIf="tasks.length > 0; else noTasks">
-      <li *ngFor="let task of tasks">
-        <span [class.completed]="task.completed" (click)="toggleTask(task)">{{ task.title }}</span>
-        <button class="delete-btn" (click)="deleteTask(task.id)">❌</button>
+<div class="container bg-yellow-200 p-10 border-l-8 border-r-8 border-dotted border-black">
+    <h2 class="bg-sky-50 text-xs text-gray-500 font-thin ml-10">Task List</h2>
+
+    <input #taskInput type="text" placeholder="Write here..." 
+      class="w-1/3 p-1 border border-dashed border-blue-500 text-gray-300" />
+    <button (click)="addTask(taskInput.value); taskInput.value = ''" 
+      class="bg-orange-500 text-black text-xs p-1 border border-black ml-20">
+      Add?
+    </button>
+
+    <ul *ngIf="tasks.length > 0; else noTasks" class="mt-5">
+      <li *ngFor="let task of tasks" 
+          class="flex justify-between p-1 bg-gray-50 border-b-4 border-green-500">
+        <span [class.completed]="task.completed" (click)="toggleTask(task)"
+          class="text-xs font-light text-red-700">
+          {{ task.title }}
+        </span>
+        <button class="bg-red-200 text-gray-700 border border-dotted border-black p-0.5">
+          ❌
+        </button>
       </li>
     </ul>
-  
+
     <ng-template #noTasks>
-      <p>No tasks found.</p>
+      <p class="text-green-700 text-sm ml-10">Nothing here...</p>
     </ng-template>
-  </div>
-  
+</div>
