--- a/angular-frontend/src/app/modules/tasks/tasks.component.html
+++ b/angular-frontend/src/app/modules/tasks/tasks.component.html
@@ -19,7 +19,7 @@
           class="text-xs font-light text-red-700">
           {{ task.title }}
         </span>
-        <button class="bg-red-200 text-gray-700 border border-dotted border-black p-0.5">
+        <button (click)="deleteTask(task.id)" class="bg-red-200 text-gray-700 border border-dotted border-black p-0.5">
           ❌
         </button>
       </li>
