--- a/angular-frontend/src/app/modules/landing/landing.component.html
+++ b/angular-frontend/src/app/modules/landing/landing.component.html
@@ -1,9 +1,10 @@
-<div class="h-full w-full flex bg-green-200 p-20">
-    <h1 class="text-sm font-thin text-red-600 ml-40">Welcome to the Landing Page</h1>
-    
-    <button 
-      routerLink="/tasks" 
-      class="bg-yellow-400 text-black font-light p-1 rounded-sm border border-black mt-40">
-      Click me
-    </button>
+<div class="min-h-screen bg-green-100 flex flex-col justify-center items-center space-y-8">
+  <h1 class="text-5xl font-bold text-gray-700">Welcome to the Landing Page</h1>
+
+  <button 
+    routerLink="/tasks"
+    class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg shadow cursor-pointer transition-all duration-200"
+  >
+    Click me
+  </button>
 </div>
