--- a/angular-frontend/src/app/modules/landing/landing.component.html
+++ b/angular-frontend/src/app/modules/landing/landing.component.html
@@ -1,10 +1,9 @@
-<div class="min-h-screen bg-gradient-to-br from-green-100 via-blue-100 to-purple-100 p-6 flex flex-col justify-center items-center space-y-8">
-  <h1 class="text-4xl sm:text-5xl font-bold text-gray-800 drop-shadow-lg">Keep it simple. Do it today</h1>
-  
-  <button
-    routerLink="/tasks"
-    class="bg-amber-500 hover:bg-amber-600 text-white font-semibold py-3 px-6 rounded-xl shadow-md hover:scale-105 transition-all duration-300 cursor-pointer"
-  >
-    Click me
-  </button>
+<div class="h-full w-full flex bg-green-200 p-20">
+    <h1 class="text-sm font-thin text-red-600 ml-40">Welcome to the Landing Page</h1>
+    
+    <button 
+      routerLink="/tasks" 
+      class="bg-yellow-400 text-black font-light p-1 rounded-sm border border-black mt-40">
+      Click me
+    </button>
 </div>
