--- a/angular-frontend/src/app/modules/landing/landing.component.html
+++ b/angular-frontend/src/app/modules/landing/landing.component.html
@@ -41,7 +41,7 @@
     <div class="relative">
       <button
         (click)="closeModal()"
-        class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-500 hover:text-white"
+        class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-800"
       >
       x
       </button>
@@ -83,7 +83,7 @@
     <div class="relative">
       <button
         (click)="closeSignUpModal()"
-        class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-500 hover:text-white"
+        class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-800"
       >
       x
       </button>
