--- a/angular-frontend/src/app/modules/home/home.component.html
+++ b/angular-frontend/src/app/modules/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="min-h-screen flex flex-col lg:flex-row bg-black text-white">
+<div class="min-h-screen flex flex-col lg:flex-row bg-black text-white md:flex-row">
     <!--Sección Izquierda-->
     <div class="w-full lg:w-4/12"></div>
     <!--Sección Central-->
     <!--Publicar Contenido-->
-    <div class="sm:w-full border-x-2 border-gray-800 md:w-4/12 lg:w-4/12 flex flex-col">
+    <div class="sm:w-full md:w-8/12 lg:w-4/12 flex flex-col border-x-2 border-gray-800">
         <h1 class="text-2xl font-bold ml-10 mt-10 mb-3 border-b-4 border-b-blue-500">
             Para Ti
         </h1>
