--- a/angular-frontend/src/app/modules/home/home.component.html
+++ b/angular-frontend/src/app/modules/home/home.component.html
@@ -47,5 +47,7 @@
         </div>
     </div>
     <!--Sección Derecha-->
-    <div class="w-full lg:w-4/12"></div>
+    <div class="w-full lg:w-4/12 p-6">
+        <app-fixtures></app-fixtures>
+    </div>
 </div>
