--- a/angular-frontend/src/app/modules/home/home.component.html
+++ b/angular-frontend/src/app/modules/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="min-h-screen flex flex-col lg:flex-row bg-black text-white md:flex-row">
     <!--Sección Izquierda-->
-    <div class="w-full lg:w-4/12"></div>
+    <div class="hidden lg:flex w-full lg:w-4/12 flex-col mt-20">
+        <img src="assets.svg" alt="Kicknet" class="w-32 h-32" />
+        <div class="flex flex-col mt-4 gap-7">
+        <button class=" cursor-pointer hover:border-gray-700"><i class="fa-solid fa-house"></i><span class="font-semibold text-xl"> Home</span></button>
+        <button class=" cursor-pointer hover:border-gray-700"><i class="fa-solid fa-user"></i><span class="font-semibold text-xl"> Profile</span></button>
+        </div>
+    </div>
     <!--Sección Central-->
     <!--Publicar Contenido-->
     <div class="sm:w-full md:w-8/12 lg:w-4/12 flex flex-col border-x-2 border-gray-800">
@@ -47,7 +53,21 @@
         </div>
     </div>
     <!--Sección Derecha-->
-    <div class="w-full lg:w-4/12 p-6">
+    <div class="hidden lg:block w-full lg:w-4/12 p-6">
         <app-fixtures></app-fixtures>
     </div>
 </div>
+
+<!-- Footer para dispositivos móviles -->
+
+<div class="lg:hidden fixed bottom-0 left-0 w-full bg-black border-t border-t-gray-800 flex justify-around py-2 pt-5 z-50">
+    <button aria-label="Inicio" class="text-white text-xl hover:text-blue-500">
+      <i class="fa-solid fa-house"></i>
+    </button>
+    <button aria-label="Perfil" class="text-white text-xl hover:text-blue-500">
+      <i class="fa-solid fa-user"></i>
+    </button>
+    <button aria-label="Partidos" class="text-white text-xl hover:text-blue-500">
+      <i class="fa-solid fa-futbol"></i>
+    </button>
+  </div>
