--- a/angular-frontend/src/app/modules/home/home.component.html
+++ b/angular-frontend/src/app/modules/home/home.component.html
@@ -1,73 +1,110 @@
-<div class="min-h-screen flex flex-col lg:flex-row bg-black text-white md:flex-row">
-    <!--Sección Izquierda-->
-    <div class="hidden lg:flex w-full lg:w-2/12 flex-col mt-20">
-        <img src="assets.svg" alt="Kicknet" class="w-32 h-32" />
-        <div class="flex flex-col mt-4 gap-7">
-        <button class=" cursor-pointer hover:border-gray-700"><i class="fa-solid fa-house"></i><span class="font-semibold text-xl"> Home</span></button>
-        <button class=" cursor-pointer hover:border-gray-700"><i class="fa-solid fa-user"></i><span class="font-semibold text-xl"> Profile</span></button>
-        </div>
+<div
+  class="min-h-screen flex flex-col lg:flex-row bg-black text-white md:flex-row"
+>
+  <!--Sección Izquierda-->
+  <div class="hidden lg:flex w-full lg:w-2/12 flex-col mt-20">
+    <img src="assets.svg" alt="Kicknet" class="w-32 h-32" />
+    <div class="flex flex-col mt-4 gap-7">
+      <button class="cursor-pointer hover:border-gray-700">
+        <i class="fa-solid fa-house"></i
+        ><span class="font-semibold text-xl"> Home</span>
+      </button>
+      <button class="cursor-pointer hover:border-gray-700">
+        <i class="fa-solid fa-user"></i
+        ><span class="font-semibold text-xl"> Profile</span>
+      </button>
     </div>
-    <!--Sección Central-->
-    <!--Publicar Contenido-->
-    <div class="sm:w-full md:w-8/12 lg:w-6/12 flex flex-col border-x-2 border-gray-800">
-        <h1 class="text-2xl font-bold ml-10 mt-10 mb-3 border-b-4 border-b-blue-500">
-            Para Ti
-        </h1>
-        <div class="border-y border-gray-800 flex flex-col py-4 min-h-[120px]">
-            <div class="flex items-start">
-                <img src="X(isco).jpeg" alt="avatar" class="w-12 h-12 rounded-full ml-4 mt-3" />
-                <textarea [(ngModel)]="mensagges"  name="paraTi" id="" placeholder="¿Que está pasando?"
-                    class="flex-1 resize-none border-none focus:outline-none text-xl placeholder-gray-400 placeholder:text-xl ml-4 mt-4"></textarea>
-            </div>
-            <button
-                (click)="publish()"
-                class="bg-white text-black rounded-full px-4 py-2 mt-4 mr-4 self-end font-bold cursor-pointer hover:border-gray-800">
-                Publicar
-            </button>
-        </div>
-        <!--Publicación -->
-        <div  *ngFor="let pub of publications" class="flex items-start p-4 border-b border-gray-700 text-white">
-            <!-- Avatar de perfil -->
-            <img [src]="pub.profileImage" alt="Avatar de perfil" class="w-12 h-12 rounded-full mr-3" />
-            <!-- Contenido del tuit -->
-            <div class="flex-1">
-                <!-- Encabezado: nombre, verificado, usuario y hora -->
-                <div class="flex items-center">
-                    <span class="font-semibold">{{pub.name}}</span>
-                    <span class="ml-2 text-gray-400 text-sm">&#64;{{pub.username}} · {{tiempoTranscurrido(pub.date)}}</span>
-                </div>
-                <!-- Texto principal del tuit -->
-                <p class="text-white">
-                    {{pub.text}}
-                </p>
-                <!-- Botones de interacción -->
-                <div class="flex items-start gap-7 w-full mt-3">
-                    <button class="text-gray-400 hover:text-red-500 focus:outline-none cursor-pointer">
-                        <i class="fas fa-heart"></i>
-                    </button>
-                    <button class="text-gray-400 hover:text-blue-500 focus:outline-none cursor-pointer">
-                        <i class="fas fa-comment"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
+  </div>
+  <!--Sección Central-->
+  <!--Publicar Contenido-->
+  <div
+    class="sm:w-full md:w-8/12 lg:w-6/12 flex flex-col border-x-2 border-gray-800"
+  >
+    <h1
+      class="text-2xl font-bold ml-10 mt-10 mb-3 border-b-4 border-b-blue-500"
+    >
+      Para Ti
+    </h1>
+    <div class="border-y border-gray-800 flex flex-col py-4 min-h-[120px]">
+      <div class="flex items-start">
+        <img
+          src="X(isco).jpeg"
+          alt="avatar"
+          class="w-12 h-12 rounded-full ml-4 mt-3"
+        />
+        <textarea
+          [(ngModel)]="mensagges"
+          name="paraTi"
+          id=""
+          placeholder="¿Que está pasando?"
+          class="flex-1 resize-none border-none focus:outline-none text-xl placeholder-gray-400 placeholder:text-xl ml-4 mt-4"
+        ></textarea>
+      </div>
+      <button
+        (click)="publish()"
+        class="bg-white text-black rounded-full px-4 py-2 mt-4 mr-4 self-end font-bold cursor-pointer hover:border-gray-800"
+      >
+        Publicar
+      </button>
     </div>
-    <!--Sección Derecha-->
-    <div class="hidden lg:block w-full lg:w-4/12 p-6">
-        <app-fixtures></app-fixtures>
+    <!--Publicación -->
+    <div
+      *ngFor="let pub of publications"
+      class="flex items-start p-4 border-b border-gray-700 text-white"
+    >
+      <!-- Avatar de perfil -->
+      <img
+        [src]="pub.profileImage"
+        alt="Avatar de perfil"
+        class="w-12 h-12 rounded-full mr-3"
+      />
+      <!-- Contenido del tuit -->
+      <div class="flex-1">
+        <!-- Encabezado: nombre, verificado, usuario y hora -->
+        <div class="flex items-center">
+          <span class="font-semibold">{{ pub.name }}</span>
+          <span class="ml-2 text-gray-400 text-sm"
+            >&#64;{{ pub.username }} · {{ tiempoTranscurrido(pub.date) }}</span
+          >
+        </div>
+        <!-- Texto principal del tuit -->
+        <p class="text-white">
+          {{ pub.text }}
+        </p>
+        <!-- Botones de interacción -->
+        <div class="flex items-start gap-7 w-full mt-3">
+          <button
+            class="text-gray-400 hover:text-red-500 focus:outline-none cursor-pointer"
+          >
+            <i class="fas fa-heart"></i>
+          </button>
+          <button
+            class="text-gray-400 hover:text-blue-500 focus:outline-none cursor-pointer"
+          >
+            <i class="fas fa-comment"></i>
+          </button>
+        </div>
+      </div>
     </div>
+  </div>
+  <!--Sección Derecha-->
+  <div class="hidden lg:block w-full lg:w-4/12 p-6">
+    <app-fixtures></app-fixtures>
+  </div>
 </div>
 
 <!-- Footer para dispositivos móviles -->
 
-<div class="lg:hidden fixed bottom-0 left-0 w-full bg-black border-t border-t-gray-800 flex justify-around py-2 pt-5 z-50">
-    <button aria-label="Inicio" class="text-white text-xl hover:text-blue-500">
-      <i class="fa-solid fa-house"></i>
-    </button>
-    <button aria-label="Perfil" class="text-white text-xl hover:text-blue-500">
-      <i class="fa-solid fa-user"></i>
-    </button>
-    <button aria-label="Partidos" class="text-white text-xl hover:text-blue-500">
-      <i class="fa-solid fa-futbol"></i>
-    </button>
-  </div>
+<div
+  class="lg:hidden fixed bottom-0 left-0 w-full bg-black border-t border-t-gray-800 flex justify-around py-2 pt-5 z-50"
+>
+  <button aria-label="Inicio" class="text-white text-xl hover:text-blue-500">
+    <i class="fa-solid fa-house"></i>
+  </button>
+  <button aria-label="Perfil" class="text-white text-xl hover:text-blue-500">
+    <i class="fa-solid fa-user"></i>
+  </button>
+  <button aria-label="Partidos" class="text-white text-xl hover:text-blue-500">
+    <i class="fa-solid fa-futbol"></i>
+  </button>
+</div>
