--- a/angular-frontend/src/app/modules/landing/landing.component.html
+++ b/angular-frontend/src/app/modules/landing/landing.component.html
@@ -94,7 +94,7 @@
         [(ngModel)]="registerUsername"
         required
         class="w-full p-2 border rounded mb-6 placeholder-gray-500 border-gray-500 focus:outline-none focus:ring-3 focus:ring-blue-500"
-        placeholder="Nombre"
+        placeholder="Usuario"
       />
       <input
         type="email"
